# lab7

./: CMakeLists.txt  Student.cpp  Student.h  main.cpp  student_tests.cpp
